# ble_uart_service

./: CMakeLists.txt  README.md  create_uf2.py  gatt_db.gatt
include/: ble_uart_service.h  btstack_config.h  data_processor.h  pt_cornell_rp2040_v1_3.h  queues.h
src/: ble_uart_service.c  data_processor.c  main.c  queues.c
